--- a/todo.txt
+++ b/todo.txt
@@ -5,13 +5,16 @@
 --DONE-- 1. I will need a Script/App to install Ansible, Packer, TF that auto-installs a 'base' so that I can build out the foundation for the rest of the steps. This should be basic, repeatable and only skeleton apps. $$Skeleton$$
 --DONE-- 2. There should be an image built for repeatable deployments/testing scenarios. These images should be created in standard software (packer), easy to modify, and deployable to a range of Cloud providers, if necessary.
   The images should: Golden, with MariaDB and Console built off of golden. $$Images$$
-3. Once I have a foundation and images, I'll need to build out the environment with Terraform. This will allow for a repatables IaC solution to not only test my code by allow my colleagues to repeat my processes for debugging
+--DONE-- 3. Once I have a foundation and images, I'll need to build out the environment with Terraform. This will allow for a repatables IaC solution to not only test my code by allow my colleagues to repeat my processes for debugging
    and deployment $$IaC$$
 
 //ENV MISC//
 1. MariaDB image should build before DevOps Image - Create SSH Key for tunneling
+   a. Currently create ssh keys via tf and insert into image that is run - I may still run with this
 2. Document steps to execute
 3. Create 'Secret key scrub' for git push
+4. Var out TF for AMI's (currently hardcoded)
+
 
 #####
 #TDD#
